--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    @apply bg-base-200;
+}
+
+::-webkit-scrollbar-thumb {
+    @apply bg-base-100;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    @apply bg-primary;
+}
