--- a/src/app.css
+++ b/src/app.css
@@ -18,3 +18,14 @@
 ::-webkit-scrollbar-thumb:hover {
     @apply bg-primary;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
